<resources>
    <string name="app_name">IGC Viewer</string>
    <string name="information_distance"><![CDATA[<b>Distance:</b> %1$skm]]></string>
    <string name="information_takeoff"><![CDATA[<b>Take Off:</b> %1$s %2$s UTC]]></string>
    <string name="information_landing"><![CDATA[<b>Landing:</b> %1$s UTC]]></string>
    <string name="information_min_altitude"><![CDATA[<b>Min Altitude:</b> %1$sm]]></string>
    <string name="information_max_altitude"><![CDATA[<b>Max Altitude:</b> %1$sm]]></string>
    <string name="information_duration"><![CDATA[<b>Duration:</b> %1$s]]></string>
    <string name="searching_igc_files">Searching for IGC files</string>
    <string name="searching_for_igc_files_on_xcsoar_s_logs_folder">Searching for IGC files on XCSoar\'s logs folder</string>
    <string name="no_files_found_with_explanation">No IGC files found.\nHave you used this device to record flights before?\n\nTry moving your IGC files into your SD card folder, recording flights with XCSoar or downloading some tracks from websites like SkyLines (http://skylines.aero).</string>
    <string name="information_glider"><![CDATA[<b>Glider:</b> %1$s]]></string>
    <string name="information_pilot"><![CDATA[<b>Pilot:</b> %1$s]]></string>
    <string name="search_flights_wait">Searching for files, please wait</string>
    <string name="refresh">Refresh</string>
    <string name="scan_complete_sd_card">Scan complete SD Card</string>
    <string name="sort_by_pilot">Sort by pilot</string>
    <string name="sort_by_glider">Sort by glider</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="about">About &amp; contact</string>
    <string name="about_developer">Developed by Santiago Hollmann</string>
    <string name="about_why">I kindly offer this app to every pilot to view and enjoy his/her flights.\n\nFeel free to contact me for improvements, suggestions or any kind of feedback.</string>
    <string name="about_contact">E-mail: santiago.hollmann@gmail.com\nFacebook: https://www.facebook.com/igcviewer\nInstagram: @igcviewer\nTwitter: @santihollmann</string>
    <string name="about_enjoy">Good flights!</string>
    <string name="version">"Version: "</string>
    <string name="sort">Sort</string>
    <string name="pilot_in_charge">Pilot</string>
    <string name="glider">Glider</string>
    <string name="duration">Duration</string>
    <string name="distance">Distance</string>
    <string name="task_distance"><![CDATA[<b>Task Distance:</b> %1$skm]]></string>
    <string name="date">Date</string>
    <string name="take_off">Take Off</string>
    <string name="landing">Landing</string>
    <string name="task_take_off"><![CDATA[<b>Take Off: </b>]]></string>
    <string name="task_landing"><![CDATA[<b>Landing: </b>]]></string>
    <string name="max_altitude">Max Altitude</string>
    <string name="min_altitude">Min Altitude</string>
    <string name="task">Task</string>
    <string name="finish"><![CDATA[<b>Finish: </b>]]></string>
    <string name="start"><![CDATA[<b>Start: </b>]]></string>
    <string name="turn"><![CDATA[<b>Turn: </b>]]></string>
    <string name="sorry_error_happen">Sorry, an unexpected error happen</string>
    <string name="altitude_chart">Historic Altitude</string>
    <string name="replay_speed_indicator">x%1$d</string>
    <string name="replay_speed_minimum">Lowest speed reached</string>
    <string name="replay_speed_maximum">Fastest speed reached</string>
    <string name="empty" />
    <string name="view_more">View Stats</string>
    <string name="need_storage_access">Access to external storage is required to find the IGC files, accept the permission request after tapping here.</string>
    <string name="altitude_reference_0m">0m</string>
    <string name="altitude_reference_2500m">>2,500m</string>
    <string name="rate_us_text"><![CDATA[<b>Did you like IGC Viewer?</b><br/>Rate and give us feedback to keep improving.]]></string>
    <string name="yes_sure">Yes, sure!</string>
    <string name="not_now">Not now</string>
    <string name="share_app">Share this app</string>
    <string name="share_app_link">Hey check this app! IGC Viewer: https://play.google.com/store/apps/details?id=com.shollmann.igcparser"</string>
    <string name="share">Share flight:</string>
    <string name="share_email_subject">IGC Viewer :: Flight %1$s</string>
    <string name="avg_speed">Flight Average Speed</string>
    <string name="historic_speed">Historic Speed</string>
    <string name="time_and_altitude">%1$s UTC at %2$dm</string>
    <string name="task_completed"><![CDATA[<b>Completed Task</b>]]></string>
    <string name="task_not_completed"><![CDATA[<b>Uncompleted Task</b>]]></string>
    <string name="task_made_distance"><![CDATA[<b>Distance Traveled:</b> %1$skm]]></string>
    <string name="task_average_speed"><![CDATA[<b>Average Speed:</b> %1$s]]></string>
    <string name="task_duration"><![CDATA[<b>Duration:</b> %1$s]]></string>
    <string name="settings_area">Area Radius</string>
    <string name="settings_start">Start Line Length</string>
    <string name="settings_finish">Finish Line Length</string>
    <string name="settings">Settings</string>
    <string name="share_email_body">View this flight with IGC Viewer: http://bit.ly/igcviewer</string>
    <string name="track_thickness">Track Thickness</string>
    <string name="extra_big">Extra big</string>
    <string name="big">Big</string>
    <string name="radio_default">Default</string>
    <string name="machine">I am flying a</string>
    <string name="radio_glider">Glider</string>
    <string name="radio_deltawing">Delta Wing</string>
    <string name="radio_paragliding">Paraglider</string>
    <string name="radio_small_plane">Small Plane</string>

</resources>
