<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/extra_large_margin"
    tools:showIn="@layout/activity_settings">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/machine"
        android:textSize="@dimen/material_text_subhead" />

    <RadioGroup
        android:id="@+id/machine_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-4dp"
        android:layout_marginTop="@dimen/medium_margin">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/machine_glider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:padding="@dimen/medium_margin"
            android:text="@string/radio_glider" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/machine_deltawing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:padding="@dimen/medium_margin"
            android:text="@string/radio_deltawing" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/machine_paraglider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:padding="@dimen/medium_margin"
            android:text="@string/radio_paragliding" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/machine_small_plane"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:padding="@dimen/medium_margin"
            android:text="@string/radio_small_plane" />
    </RadioGroup>

</LinearLayout>
